<resources>
    <string name="app_name">SaleFinder</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="merchant_logo">Merchant logo</string>
    <string name="add_item">Add item…</string>
    <string name="search">Search</string>
    <string name="what_would_you_like_to_search_for_today">What would you like to search for today?</string>
    <string name="see_sales_below">See sales below:</string>
    <string name="cutout_image">Cutout Image</string>
    <string name="grocery_list">Grocery List</string>
    <string name="merchants">Merchants</string>
    <string name="selected_merchants">Selected Merchants:</string>
    <string name="edit_merchants">Edit merchants</string>
</resources>