<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:text="@string/merchants">
    </TextView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <Spinner
            android:id="@+id/select_merchant_spinner"
            android:layout_width="275dp"
            android:layout_height="50dp"
            android:spinnerMode="dropdown">
        </Spinner>
        <Button
            android:id="@+id/add_merchant_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:textSize="20sp"
            android:text="+">
        </Button>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:text="@string/selected_merchants">
    </TextView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_selected_merchants"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginHorizontal="25dp">
    </androidx.recyclerview.widget.RecyclerView>

    <Button
        android:id="@+id/search_btn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/search">
    </Button>

</androidx.appcompat.widget.LinearLayoutCompat>